--- a/jupyter_notebooks/getting_data/get_2_beautifulsoup.ipynb
+++ b/jupyter_notebooks/getting_data/get_2_beautifulsoup.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "either\n",
     "pip install beautifulsoup4\n",
     "\n",
+    "or\n",
     "conda install -c anaconda beautifulsoup4 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +24,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.crummy.com/software/BeautifulSoup/bs4/doc/"
+    "see https://www.crummy.com/software/BeautifulSoup/bs4/doc/\n",
+    "\n",
+    "Let's explore a snippet of HTML:"
    ]
   },
   {
@@ -47,6 +51,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "use BeautifulSoup to parse the HTML text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -54,6 +65,13 @@
    "source": [
     "soup = BeautifulSoup(html_doc, 'html.parser')\n",
     "#print(soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "now we can inspect components of the HTML"
    ]
   },
   {
@@ -115,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
