--- a/jupyter_notebooks/data_formats/load_xml.ipynb
+++ b/jupyter_notebooks/data_formats/load_xml.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        " {'@value': 'Close', '@onclick': 'CloseDoc()'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<DOM Element: menuitem at 0x7f77f4ed5a60>, <DOM Element: menuitem at 0x7f77f4ed5af8>, <DOM Element: menuitem at 0x7f77f4ed5b90>]\n"
+      "[<DOM Element: menuitem at 0x7f4a904286d0>, <DOM Element: menuitem at 0x7f4a90428768>, <DOM Element: menuitem at 0x7f4a90428800>]\n"
      ]
     }
    ],
@@ -189,7 +189,7 @@
     {
      "data": {
       "text/plain": [
-       "<Element 'menu' at 0x7f77f98787c8>"
+       "<Element 'menu' at 0x7f4a90372688>"
       ]
      },
      "execution_count": 8,
@@ -201,6 +201,41 @@
     "import xml.etree.ElementTree\n",
     "menu = xml.etree.ElementTree.parse('sample_menu.xml').getroot()\n",
     "menu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'menu.popup'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-3bc317d9b916>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutput_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'menu.popup'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'menu.popup'"
+     ]
+    }
+   ],
+   "source": [
+    "output_dict['menu.popup']"
    ]
   },
   {
@@ -227,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
