--- a/jupyter_notebooks/getting_data/get_1_requests.ipynb
+++ b/jupyter_notebooks/getting_data/get_1_requests.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this notebook demonstrates use of \"requests\" Python module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10,13 +17,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given the URL of a CSV file, get the content of the page"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get('https://raw.githubusercontent.com/ggallo/boston-housing/master/housing.csv')\n",
-    "response.text.split()"
+    "the_response = requests.get('https://raw.githubusercontent.com/ggallo/boston-housing/master/housing.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the output is saved to a variable, \"the_response\"\n",
+    "\n",
+    "We can inspect the type of the variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(the_response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to get the text held in the variable, use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "the_response.text.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens if we access a page that isn't a CSV?"
    ]
   },
   {
@@ -26,7 +80,14 @@
    "outputs": [],
    "source": [
     "response = requests.get('https://en.wikipedia.org')\n",
-    "response.ok"
+    "response.ok # validate that the page returned a result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the content of the variable?"
    ]
   },
   {
@@ -36,6 +97,13 @@
    "outputs": [],
    "source": [
     "response.text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "web content is almost never in a format that makes analysis easy. As an example, the mostly-structured data on this page is stored as HTML:"
    ]
   },
   {
@@ -72,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
