--- a/jupyter_notebooks/week_03_getting_data/text_2_get_text_from_all_docx.ipynb
+++ b/jupyter_notebooks/week_03_getting_data/text_2_get_text_from_all_docx.ipynb
@@ -2,40 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import json\n",
-    "import random"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_url=\"https://sis.jhu.edu/api/\"\n",
-    "with open('mykey','r') as mk:\n",
-    "    mykey=mk.readlines()[0].rstrip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mykey"
+    "from docx import Document\n",
+    "import os"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://sis.jhu.edu/api/"
+    "Create a function that gets text in document into a dictionary\n",
+    "\n",
+    "https://stackoverflow.com/questions/25228106/how-to-extract-text-from-an-existing-docx-file-using-python-docx"
    ]
   },
   {
@@ -44,13 +25,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_schools(mykey):\n",
-    "    try:\n",
-    "        response = requests.get(base_url+\"classes/codes/schools\", params={'key':mykey})\n",
-    "        return response.json()\n",
-    "    except:\n",
-    "        print('Error in getting schools',response)\n",
-    "        return None"
+    "def get_text_from_docx(document):\n",
+    "    indx=0\n",
+    "    text_in_dict={}\n",
+    "    for para in document.paragraphs:\n",
+    "        if (len(para.text)>0):\n",
+    "            indx+=1\n",
+    "            text_in_dict[indx]=para.text\n",
+    "    return text_in_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loop over .docx files in directory"
    ]
   },
   {
@@ -59,8 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_schools=get_schools(mykey)\n",
-    "list_of_schools"
+    "directory=\"essays\"\n",
+    "for filename in os.listdir(directory):\n",
+    "    if filename.endswith(\".docx\") or filename.endswith(\".doc\"): \n",
+    "        print(os.path.join(directory, filename))"
    ]
   },
   {
@@ -69,13 +60,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_classes(mykey,school):\n",
-    "    try:\n",
-    "        response = requests.get(base_url+'/classes/'+school, params={'key':mykey})\n",
-    "        return response.json()\n",
-    "    except:\n",
-    "        print('Error in getting classes',response)\n",
-    "        return None"
+    "directory=\"essays\"\n",
+    "docx_content={}\n",
+    "for filename in os.listdir(directory):\n",
+    "    if filename.endswith(\".docx\") or filename.endswith(\".doc\"): \n",
+    "        this_path=os.path.join(directory, filename)\n",
+    "        document = Document(this_path)\n",
+    "        docx_content[this_path]=get_text_from_docx(document)"
    ]
   },
   {
@@ -84,8 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_classes=get_classes(mykey,random.choice(list_of_schools)['Name'])\n",
-    "print(len(list_of_classes))"
+    "docx_content.keys()"
    ]
   },
   {
@@ -94,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list_of_classes[0]"
+    "docx_content['essays/week2_Lists and Dictionaries Summary.docx']"
    ]
   },
   {
@@ -121,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
