--- a/jupyter_notebooks/week_03_getting_data/text_3_extract_text_from_pdf.ipynb
+++ b/jupyter_notebooks/week_03_getting_data/text_3_extract_text_from_pdf.ipynb
@@ -2,7 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting PyPDF2\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/b4/01/68fcc0d43daf4c6bdbc6b33cc3f77bda531c86b174cac56ef0ffdb96faab/PyPDF2-1.26.0.tar.gz (77kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 81kB 309kB/s \n",
+      "\u001b[?25hBuilding wheels for collected packages: PyPDF2\n",
+      "  Running setup.py bdist_wheel for PyPDF2 ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/53/84/19/35bc977c8bf5f0c23a8a011aa958acd4da4bbd7a229315c1b7\n",
+      "Successfully built PyPDF2\n",
+      "Installing collected packages: PyPDF2\n",
+      "Successfully installed PyPDF2-1.26.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install PyPDF2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
