--- a/jupyter_notebooks/week_04_cleaning_data/loans_2_data_types.ipynb
+++ b/jupyter_notebooks/week_04_cleaning_data/loans_2_data_types.ipynb
@@ -29,16 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.767995834350586 seconds\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(42538, 145)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +53,7 @@
    "source": [
     "start_time = time.time()\n",
     "loans_2007 = pandas.read_csv('LoanStats3a.csv', skiprows=1, low_memory=False)\n",
-    "print(time.time() - start_time)\n",
+    "print(time.time() - start_time,'seconds')\n",
     "loans_2007.shape"
    ]
   },
@@ -140,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +311,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
