--- a/jupyter_notebooks/week_04_cleaning_data/loans_3_describe.ipynb
+++ b/jupyter_notebooks/week_04_cleaning_data/loans_3_describe.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.866227865219116\n"
+      "4.282204627990723 seconds\n"
      ]
     },
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2174,7 +2174,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Total amount funded in policy code 2: 0</td>\n",
+       "      <td>Loans that do not meet the credit policy</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -3509,18 +3509,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                                             id  member_id     loan_amnt  \\\n",
-       "count                                         3        0.0  42535.000000   \n",
-       "unique                                        3        NaN           NaN   \n",
-       "top     Total amount funded in policy code 2: 0        NaN           NaN   \n",
-       "freq                                          1        NaN           NaN   \n",
-       "mean                                        NaN        NaN  11089.722581   \n",
-       "std                                         NaN        NaN   7410.938391   \n",
-       "min                                         NaN        NaN    500.000000   \n",
-       "25%                                         NaN        NaN   5200.000000   \n",
-       "50%                                         NaN        NaN   9700.000000   \n",
-       "75%                                         NaN        NaN  15000.000000   \n",
-       "max                                         NaN        NaN  35000.000000   \n",
+       "                                              id  member_id     loan_amnt  \\\n",
+       "count                                          3        0.0  42535.000000   \n",
+       "unique                                         3        NaN           NaN   \n",
+       "top     Loans that do not meet the credit policy        NaN           NaN   \n",
+       "freq                                           1        NaN           NaN   \n",
+       "mean                                         NaN        NaN  11089.722581   \n",
+       "std                                          NaN        NaN   7410.938391   \n",
+       "min                                          NaN        NaN    500.000000   \n",
+       "25%                                          NaN        NaN   5200.000000   \n",
+       "50%                                          NaN        NaN   9700.000000   \n",
+       "75%                                          NaN        NaN  15000.000000   \n",
+       "max                                          NaN        NaN  35000.000000   \n",
        "\n",
        "         funded_amnt  funded_amnt_inv        term int_rate   installment  \\\n",
        "count   42535.000000     42535.000000       42535    42535  42535.000000   \n",
@@ -4186,7 +4186,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Total amount funded in policy code 2: 0</td>\n",
+       "      <td>Loans that do not meet the credit policy</td>\n",
        "      <td>36 months</td>\n",
        "      <td>10.99%</td>\n",
        "      <td>B</td>\n",
@@ -4255,11 +4255,11 @@
        "</div>"
       ],
       "text/plain": [
-       "                                             id        term int_rate  grade  \\\n",
-       "count                                         3       42535    42535  42535   \n",
-       "unique                                        3           2      394      7   \n",
-       "top     Total amount funded in policy code 2: 0   36 months   10.99%      B   \n",
-       "freq                                          1       31534      970  12389   \n",
+       "                                              id        term int_rate  grade  \\\n",
+       "count                                          3       42535    42535  42535   \n",
+       "unique                                         3           2      394      7   \n",
+       "top     Loans that do not meet the credit policy   36 months   10.99%      B   \n",
+       "freq                                           1       31534      970  12389   \n",
        "\n",
        "       sub_grade emp_title emp_length home_ownership verification_status  \\\n",
        "count      42535     39909      41423          42535               42535   \n",
