--- a/jupyter_notebooks/week_04_cleaning_data/loans_5_unique_entries_per_column.ipynb
+++ b/jupyter_notebooks/week_04_cleaning_data/loans_5_unique_entries_per_column.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.676600217819214 seconds\n"
+      "11.096744775772095 seconds\n"
      ]
     },
     {
@@ -45,7 +45,7 @@
        "(42538, 145)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -470,11 +470,11 @@
       "Series([], Name: url, dtype: int64)\n",
       "\n",
       "====  desc has 28963 unique entries ====\n",
-      "                      225\n",
-      "Debt Consolidation     11\n",
-      "Camping Membership      8\n",
-      "refinancing             5\n",
-      "consolidate debt        3\n",
+      "                             225\n",
+      "Debt Consolidation            11\n",
+      "Camping Membership             8\n",
+      "refinancing                    5\n",
+      "credit card consolidation      3\n",
       "Name: desc, dtype: int64\n",
       "\n",
       "====  purpose has 14 unique entries ====\n",
@@ -987,8 +987,8 @@
       "\n",
       "====  debt_settlement_flag_date has 63 unique entries ====\n",
       "Jun-2017    18\n",
-      "Jan-2015     7\n",
       "Apr-2017     7\n",
+      "Jan-2015     7\n",
       "Sep-2015     6\n",
       "Oct-2013     5\n",
       "Name: debt_settlement_flag_date, dtype: int64\n",
@@ -1000,11 +1000,11 @@
       "Name: settlement_status, dtype: int64\n",
       "\n",
       "====  settlement_date has 61 unique entries ====\n",
-      "Sep-2013    8\n",
       "Oct-2013    8\n",
       "Jan-2015    8\n",
-      "Jul-2014    6\n",
+      "Sep-2013    8\n",
       "Mar-2013    6\n",
+      "Jul-2014    6\n",
       "Name: settlement_date, dtype: int64\n",
       "\n",
       "====  settlement_amount has 143 unique entries ====\n",
