--- a/jupyter_notebooks/week_04_cleaning_data/loans_empty_entries_1.ipynb
+++ b/jupyter_notebooks/week_04_cleaning_data/loans_empty_entries_1.ipynb
@@ -53,7 +53,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.908600091934204 seconds\n"
+      "10.349263191223145 seconds\n"
      ]
     },
     {
@@ -3506,7 +3506,7 @@
     "print('before:',loans_2007.shape)\n",
     "\n",
     "loans_2007.drop(['id'],axis=1,inplace=True)\n",
-    "loans_2007.dropna(how='all',axis=0,inplace=True)\n",
+    "loans_2007.dropna(how='all',axis=0,inplace=True) # drop empty rows\n",
     "\n",
     "print('after:',loans_2007.shape)"
    ]
@@ -3530,7 +3530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.8840622901916504 seconds\n"
+      "9.374513149261475 seconds\n"
      ]
     },
     {
@@ -3676,9 +3676,9 @@
      "output_type": "stream",
      "text": [
       "====  id has 3 unique entries ====\n",
-      "Total amount funded in policy code 1: 460296150    1\n",
-      "Loans that do not meet the credit policy           1\n",
       "Total amount funded in policy code 2: 0            1\n",
+      "Loans that do not meet the credit policy           1\n",
+      "Total amount funded in policy code 1: 460296150    1\n",
       "Name: id, dtype: int64\n",
       "====  loan_amnt has 898 unique entries ====\n",
       "10000.0    3016\n",
@@ -3737,8 +3737,8 @@
       "US Army              139\n",
       "Bank of America      115\n",
       "IBM                   72\n",
-      "AT&T                  61\n",
       "Kaiser Permanente     61\n",
+      "AT&T                  61\n",
       "Name: emp_title, dtype: int64\n",
       "====  emp_length has 11 unique entries ====\n",
       "10+ years    9369\n",
@@ -3992,10 +3992,10 @@
       "Name: debt_settlement_flag, dtype: int64\n",
       "====  debt_settlement_flag_date has 63 unique entries ====\n",
       "Jun-2017    18\n",
-      "Jan-2015     7\n",
       "Apr-2017     7\n",
+      "Jan-2015     7\n",
       "Sep-2015     6\n",
-      "Feb-2015     5\n",
+      "Oct-2013     5\n",
       "Name: debt_settlement_flag_date, dtype: int64\n",
       "====  settlement_status has 3 unique entries ====\n",
       "COMPLETE    143\n",
@@ -4003,9 +4003,9 @@
       "ACTIVE        3\n",
       "Name: settlement_status, dtype: int64\n",
       "====  settlement_date has 61 unique entries ====\n",
-      "Oct-2013    8\n",
       "Sep-2013    8\n",
       "Jan-2015    8\n",
+      "Oct-2013    8\n",
       "Mar-2013    6\n",
       "Jul-2014    6\n",
       "Name: settlement_date, dtype: int64\n",
