--- a/jupyter_notebooks/week_05_automation/send_email/gmail_api.ipynb
+++ b/jupyter_notebooks/week_05_automation/send_email/gmail_api.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dc80feba18b0\n"
+      "58137052d3ff\n"
      ]
     }
    ],
@@ -34,28 +34,24 @@
      "output_type": "stream",
      "text": [
       "Collecting google-api-python-client\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/55/e9/e8fb2e3a031cb69b9524b80a92b126665d9a17421700a219555e3233ab6a/google_api_python_client-1.7.8-py3-none-any.whl (56kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 61kB 528kB/s \n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: six<2dev,>=1.6.1 in /opt/conda/lib/python3.6/site-packages (from google-api-python-client) (1.11.0)\n",
+      "  Using cached https://files.pythonhosted.org/packages/55/e9/e8fb2e3a031cb69b9524b80a92b126665d9a17421700a219555e3233ab6a/google_api_python_client-1.7.8-py3-none-any.whl\n",
+      "Requirement already satisfied, skipping upgrade: six<2dev,>=1.6.1 in /opt/conda/lib/python3.6/site-packages (from google-api-python-client) (1.11.0)\n",
       "Collecting google-auth>=1.4.1 (from google-api-python-client)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c5/9b/ed0516cc1f7609fb0217e3057ff4f0f9f3e3ce79a369c6af4a6c5ca25664/google_auth-1.6.3-py2.py3-none-any.whl (73kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 81kB 1.3MB/s \n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: httplib2<1dev,>=0.9.2 in /opt/conda/lib/python3.6/site-packages (from google-api-python-client) (0.12.1)\n",
+      "  Using cached https://files.pythonhosted.org/packages/c5/9b/ed0516cc1f7609fb0217e3057ff4f0f9f3e3ce79a369c6af4a6c5ca25664/google_auth-1.6.3-py2.py3-none-any.whl\n",
+      "Requirement already satisfied, skipping upgrade: httplib2<1dev,>=0.9.2 in /opt/conda/lib/python3.6/site-packages (from google-api-python-client) (0.12.1)\n",
       "Collecting google-auth-httplib2>=0.0.3 (from google-api-python-client)\n",
-      "  Downloading https://files.pythonhosted.org/packages/33/49/c814d6d438b823441552198f096fcd0377fd6c88714dbed34f1d3c8c4389/google_auth_httplib2-0.0.3-py2.py3-none-any.whl\n",
+      "  Using cached https://files.pythonhosted.org/packages/33/49/c814d6d438b823441552198f096fcd0377fd6c88714dbed34f1d3c8c4389/google_auth_httplib2-0.0.3-py2.py3-none-any.whl\n",
       "Collecting uritemplate<4dev,>=3.0.0 (from google-api-python-client)\n",
-      "  Downloading https://files.pythonhosted.org/packages/e5/7d/9d5a640c4f8bf2c8b1afc015e9a9d8de32e13c9016dcc4b0ec03481fb396/uritemplate-3.0.0-py2.py3-none-any.whl\n",
-      "Collecting rsa>=3.1.4 (from google-auth>=1.4.1->google-api-python-client)\n",
-      "  Downloading https://files.pythonhosted.org/packages/02/e5/38518af393f7c214357079ce67a317307936896e961e35450b70fad2a9cf/rsa-4.0-py2.py3-none-any.whl\n",
-      "Collecting cachetools>=2.0.0 (from google-auth>=1.4.1->google-api-python-client)\n",
-      "  Downloading https://files.pythonhosted.org/packages/39/2b/d87fc2369242bd743883232c463f28205902b8579cb68dcf5b11eee1652f/cachetools-3.1.0-py2.py3-none-any.whl\n",
+      "  Using cached https://files.pythonhosted.org/packages/e5/7d/9d5a640c4f8bf2c8b1afc015e9a9d8de32e13c9016dcc4b0ec03481fb396/uritemplate-3.0.0-py2.py3-none-any.whl\n",
       "Collecting pyasn1-modules>=0.2.1 (from google-auth>=1.4.1->google-api-python-client)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/da/98/8ddd9fa4d84065926832bcf2255a2b69f1d03330aa4d1c49cc7317ac888e/pyasn1_modules-0.2.4-py2.py3-none-any.whl (66kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 71kB 1.7MB/s \n",
-      "\u001b[?25hCollecting pyasn1>=0.1.3 (from rsa>=3.1.4->google-auth>=1.4.1->google-api-python-client)\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/7b/7c/c9386b82a25115cccf1903441bba3cbadcfae7b678a20167347fa8ded34c/pyasn1-0.4.5-py2.py3-none-any.whl (73kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 81kB 1.5MB/s \n",
-      "\u001b[?25hInstalling collected packages: pyasn1, rsa, cachetools, pyasn1-modules, google-auth, google-auth-httplib2, uritemplate, google-api-python-client\n",
+      "  Using cached https://files.pythonhosted.org/packages/da/98/8ddd9fa4d84065926832bcf2255a2b69f1d03330aa4d1c49cc7317ac888e/pyasn1_modules-0.2.4-py2.py3-none-any.whl\n",
+      "Collecting rsa>=3.1.4 (from google-auth>=1.4.1->google-api-python-client)\n",
+      "  Using cached https://files.pythonhosted.org/packages/02/e5/38518af393f7c214357079ce67a317307936896e961e35450b70fad2a9cf/rsa-4.0-py2.py3-none-any.whl\n",
+      "Collecting cachetools>=2.0.0 (from google-auth>=1.4.1->google-api-python-client)\n",
+      "  Using cached https://files.pythonhosted.org/packages/39/2b/d87fc2369242bd743883232c463f28205902b8579cb68dcf5b11eee1652f/cachetools-3.1.0-py2.py3-none-any.whl\n",
+      "Collecting pyasn1<0.5.0,>=0.4.1 (from pyasn1-modules>=0.2.1->google-auth>=1.4.1->google-api-python-client)\n",
+      "  Using cached https://files.pythonhosted.org/packages/7b/7c/c9386b82a25115cccf1903441bba3cbadcfae7b678a20167347fa8ded34c/pyasn1-0.4.5-py2.py3-none-any.whl\n",
+      "Installing collected packages: pyasn1, pyasn1-modules, rsa, cachetools, google-auth, google-auth-httplib2, uritemplate, google-api-python-client\n",
       "Successfully installed cachetools-3.1.0 google-api-python-client-1.7.8 google-auth-1.6.3 google-auth-httplib2-0.0.3 pyasn1-0.4.5 pyasn1-modules-0.2.4 rsa-4.0 uritemplate-3.0.0\n"
      ]
     }
@@ -74,13 +70,12 @@
      "output_type": "stream",
      "text": [
       "Collecting oauth2client\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/95/a9/4f25a14d23f0786b64875b91784607c2277eff25d48f915e39ff0cff505a/oauth2client-4.1.3-py2.py3-none-any.whl (98kB)\n",
-      "\u001b[K    100% |████████████████████████████████| 102kB 807kB/s \n",
-      "\u001b[?25hRequirement already satisfied, skipping upgrade: pyasn1>=0.1.7 in /opt/conda/lib/python3.6/site-packages (from oauth2client) (0.4.5)\n",
-      "Requirement already satisfied, skipping upgrade: six>=1.6.1 in /opt/conda/lib/python3.6/site-packages (from oauth2client) (1.11.0)\n",
-      "Requirement already satisfied, skipping upgrade: pyasn1-modules>=0.0.5 in /opt/conda/lib/python3.6/site-packages (from oauth2client) (0.2.4)\n",
+      "  Using cached https://files.pythonhosted.org/packages/95/a9/4f25a14d23f0786b64875b91784607c2277eff25d48f915e39ff0cff505a/oauth2client-4.1.3-py2.py3-none-any.whl\n",
       "Requirement already satisfied, skipping upgrade: rsa>=3.1.4 in /opt/conda/lib/python3.6/site-packages (from oauth2client) (4.0)\n",
+      "Requirement already satisfied, skipping upgrade: pyasn1-modules>=0.0.5 in /opt/conda/lib/python3.6/site-packages (from oauth2client) (0.2.4)\n",
       "Requirement already satisfied, skipping upgrade: httplib2>=0.9.1 in /opt/conda/lib/python3.6/site-packages (from oauth2client) (0.12.1)\n",
+      "Requirement already satisfied, skipping upgrade: six>=1.6.1 in /opt/conda/lib/python3.6/site-packages (from oauth2client) (1.11.0)\n",
+      "Requirement already satisfied, skipping upgrade: pyasn1>=0.1.7 in /opt/conda/lib/python3.6/site-packages (from oauth2client) (0.4.5)\n",
       "Installing collected packages: oauth2client\n",
       "Successfully installed oauth2client-4.1.3\n"
      ]
@@ -259,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +263,7 @@
        "{'raw': 'Q29udGVudC1UeXBlOiB0ZXh0L3BsYWluOyBjaGFyc2V0PSJ1cy1hc2NpaSIKTUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UcmFuc2Zlci1FbmNvZGluZzogN2JpdAp0bzogYmVuLmlzLmxvY2F0ZWRAZ21haWwuY29tCmZyb206IGJlbnBheW5lQHVtYmMuZWR1CnN1YmplY3Q6IGEgc3ViamN0Cgptc2cgdGV4dCBmcm9tIFB5dGhvbg=='}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,14 +326,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Message Id: 1692132559e5aafb\n"
+      "Message Id: 16931cb133a56792\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'id': '1692132559e5aafb',\n",
-       " 'threadId': '1692132559e5aafb',\n",
+       "{'id': '16931cb133a56792',\n",
+       " 'threadId': '16931cb133a56792',\n",
        " 'labelIds': ['UNREAD', 'SENT', 'INBOX']}"
       ]
      },
@@ -402,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
