--- a/jupyter_notebooks/week_09_timeseries/host_streaming_stats/analysis_of_static_timeseries.ipynb
+++ b/jupyter_notebooks/week_09_timeseries/host_streaming_stats/analysis_of_static_timeseries.ipynb
@@ -86,11 +86,12 @@
    "source": [
     "def scatter_plot_column(df,col_name):\n",
     "    if not isinstance(df,pandas.core.frame.DataFrame):\n",
-    "        print('ERROR: expected input of type dataframe')\n",
+    "        raise TypeError('ERROR: expected input of type dataframe, got',type(df))\n",
     "        return None\n",
     "    print(col_name)\n",
     "    x=df['time in unix seconds']\n",
     "    y=df[col_name]\n",
+    "    # https://stackoverflow.com/questions/31126698/differences-between-scipy-stats-linregress-numpy-polynomial-polynomial-polyfi\n",
     "    # https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.linregress.html\n",
     "    slope, intercept, r_value, p_value, std_err = stats.linregress(x,y)\n",
     "\n",
@@ -104,8 +105,7 @@
     "        plt.plot(x, intercept + slope*x, 'r', label='fitted line')\n",
     "        linear=True\n",
     "    else:\n",
-    "        x=df['datetime']\n",
-    "        plt.plot_date(x,y,label='original')\n",
+    "        plt.plot_date(x=df['datetime'],y,label='original')\n",
     "        plt.xticks(rotation=40)\n",
     "        linear=False\n",
     "    \n",
